[tool.poetry]
name = "coupler"
version = "0.1.0"
description = ""
authors = ["CalebJohn <calebjohn4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
prompt-toolkit = "^3.0.8"
Pygments = "^2.7.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.scripts]
cpl = 'coupler.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
